# pyrere

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bundle.py  concat.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pyrere/: __init__.py
pyrere/_viewer/: app.js  graph.json  index.html
pyrere/aggregator/: builder.py
pyrere/context/: __init__.py
pyrere/enrichment/: __init__.py  grimp_.py  pycg_.py  pyright.py
pyrere/flow/: __init__.py  analyzer.py
pyrere/graph/: models.py
pyrere/ingestion/: loader.py
pyrere/llm/: __init__.py
pyrere/parsing/: parser.py
pyrere/symbols/: extractor.py
pyrere/utils/: spatial.py
pyrere_scripts/: run.py
scripts/: run.py
src/aggregator/: builder.py
src/coddingtoddly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ingestion/: loader.py
src/parsing/: parser.py
src/symbols/: extractor.py
tests/: conftest.py  test_builder.py  test_extractor.py  test_loader.py  test_models.py  test_spatial.py  test_stubs_and_parser.py
viewer/: app.js  index.html
