# ══════════════════════════════════════════════════════════════════════════════
# PROJECT METADATA
# ══════════════════════════════════════════════════════════════════════════════

[project]
name = "pyrere"
version = "0.1.0"
description = "Code Knowledge Graph: static analysis + LLM-assisted refactoring pipeline"
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.10"

authors = [
    { name = "3IVIS GmbH", email = "contact@3ivis.com" },
]

keywords = [
    "code analysis", "knowledge graph", "tree-sitter",
    "static analysis", "refactoring", "LLM",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    # PEP 561: this package ships inline type annotations
    "Typing :: Typed",
]

# Uses the legacy tree-sitter bundle (< 0.22) with pre-compiled grammars.
# See README for instructions on switching to the modern per-language packages.
dependencies = [
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10.2",
]

[project.urls]
Homepage      = "https://github.com/3ivis/pyrere"
Documentation = "https://github.com/3ivis/pyrere#readme"
"Bug Tracker" = "https://github.com/3ivis/pyrere/issues"

[build-system]
requires      = ["setuptools>=68,<68.3", "wheel"]
build-backend = "setuptools.build_meta"

# ── Optional dependency groups ────────────────────────────────────────────────
# Install with:
#   pip install "pyrere[flow]"
#   pip install "pyrere[enrichment]"
#   pip install "pyrere[all]"

[project.optional-dependencies]

# Step 8: static linters and security scanners
flow = [
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit>=1.7.9",
]

# Step 4: semantic enrichment tools
# NOTE: pyright requires Node.js on your PATH at runtime (it is a Node.js
#       program wrapped by a thin pip shim).  Installation will succeed
#       without Node.js but running pyrere[enrichment] will fail.
# NOTE: pycg (>=0.0.7) is a research tool with limited maintenance.  It may
#       not install cleanly on Python 3.11+.  pyrere degrades gracefully when
#       pycg is absent — the call-graph enrichment step is simply skipped.
enrichment = [
    "pyright>=1.1.0",
    "grimp>=3.4",
    "pycg>=0.0.7",
]

# FIX: self-referential extras ("pyrere[flow,enrichment]") fail silently on
# pip < 21.2.  List all deps explicitly so any pip version works.
all = [
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit>=1.7.9",
    "pyright>=1.1.0",
    "grimp>=3.4",
    "pycg>=0.0.7",
]

dev = [
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit>=1.7.9",
    "pyright>=1.1.0",
    "grimp>=3.4",
    "pycg>=0.0.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]


# ── Entry points ──────────────────────────────────────────────────────────────
[project.scripts]
pyrere = "pyrere_scripts.run:main"


# ══════════════════════════════════════════════════════════════════════════════
# PACKAGE DISCOVERY
# ══════════════════════════════════════════════════════════════════════════════

[tool.setuptools.packages.find]
where   = ["."]
include = ["pyrere*", "pyrere_scripts*"]
# Exclusions:
#   *.egg-info        — build artefacts
#   _viewer*          — top-level _viewer (safety net; not a real package)
#   pyrere._viewer    — _viewer/ is a static-asset directory, not a Python
#                       package; its __init__.py exists only as a placeholder.
#                       Excluding it here prevents an empty pyrere._viewer
#                       package from appearing in the installed wheel.
#                       The actual HTML/JS/CSS files are shipped via package-data.
#   tests*            — test suite, not for distribution
#   pyrere.relationships — empty placeholder, not yet implemented
exclude = [
    "*.egg-info",
    "_viewer*",
    "pyrere._viewer",
    "pyrere._viewer.*",
    "tests*",
    "pyrere.relationships",
    "pyrere.relationships.*",
]

[tool.setuptools.package-data]
"pyrere" = [
    # PEP 561 marker — tells mypy/pyright that this package ships type stubs
    "py.typed",
    # Interactive viewer static assets
    "_viewer/*.html",
    "_viewer/*.js",
    "_viewer/*.css",
]


# ══════════════════════════════════════════════════════════════════════════════
# TOOL CONFIGURATIONS
# ══════════════════════════════════════════════════════════════════════════════

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100
exclude = [
    ".git", ".hg", ".tox", ".venv", "venv", "env",
    "build", "dist", "__pycache__",
    "*.egg-info",
    "_viewer",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # do-not-perform-function-call-in-default-argument
    "SIM108", # ternary — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["pyrere", "pyrere_scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending  = "auto"


# ── bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "_viewer", ".venv", "venv", "build", "dist"]
skips = ["B101", "B603", "B607"]


# ── vulture ───────────────────────────────────────────────────────────────────
[tool.vulture]
min_confidence = 70
paths          = ["pyrere", "pyrere_scripts"]
exclude        = ["_viewer/", ".venv/", "venv/", "build/", "dist/"]


# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true
warn_return_any        = false
exclude                = ["_viewer/", "build/", "dist/"]


# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-ra -q --tb=short"
python_files = ["test_*.py", "*_test.py"]
markers      = [
    "integration: marks tests that invoke real external tools (deselect with '-m not integration')",
]